--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 alembic==0.8.4
+amqp==1.4.9
+anyjson==0.3.3
+billiard==3.3.0.23
 bleach==1.4.2
 blinker==1.4
+celery==3.1.23
 cffi==1.5.2
 cssmin==0.2.0
 Flask==0.10.1
@@ -10,7 +14,6 @@ Flask-Mail==0.9.1
 Flask-Migrate==1.8.0
 Flask-Principal==0.4.0
 Flask-Script==2.0.5
-Flask-SocketIO==2.1
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 gunicorn==19.4.5
@@ -19,18 +22,18 @@ html5lib==0.9999999
 itsdangerous==0.24
 Jinja2==2.8
 jsmin==2.2.0
-Mako==1.0.3
+kombu==3.0.35
+Mako==1.0.4
 MarkupSafe==0.23
 misaka==2.0.0
 Pillow==3.1.1
 psycopg2==2.6.1
 pycparser==2.14
 python-editor==0.5
-python-engineio==0.8.8
-python-socketio==1.0
+pytz==2016.3
 redis==2.10.5
 six==1.10.0
 SQLAlchemy==1.0.12
 webassets==0.11.1
-Werkzeug==0.11.4
+Werkzeug==0.11.5
 WTForms==2.1
